--- a/cripto_estafas/src/app/globals.css
+++ b/cripto_estafas/src/app/globals.css
@@ -15,7 +15,7 @@
 }
 .scam-container {
   width:500px;
-  background-color: #f0f0f0;
+  background-color: #cccccc;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
